--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -1,5 +1,6 @@
 .navbar {
   width: 100%;
+  position: fixed;
   height: 90px;
   display: flex;
   justify-content: space-between;
@@ -18,6 +19,6 @@ img {
   width: 80px;
   display: flex;
   align-items: center;
-  margin-right: 150px;
+  margin-right: 20px;
   cursor: pointer;
 }
