--- a/frontend/src/pages/Splash/Splash.css
+++ b/frontend/src/pages/Splash/Splash.css
@@ -24,3 +24,23 @@
     grid-template-columns: 1fr;
   }
 }
+
+.tooltip:hover .tooltip-text {
+  visibility: visible;
+}
+
+.tooltip-text {
+  visibility: hidden;
+  width: 100px;
+  background-color: green;
+  text-align: center;
+  position: absolute;
+  left: 50%;
+  top: 20%;
+  transform: translate(-50%, -50%);
+}
+
+.tooltip {
+  position: relative;
+  display: inline-block;
+}
