--- a/frontend/src/pages/Splash/Splash.css
+++ b/frontend/src/pages/Splash/Splash.css
@@ -32,12 +32,15 @@
 .tooltip-text {
   visibility: hidden;
   width: 100px;
-  background-color: green;
+  background-color: gray;
+  padding: 8px;
+  color: black;
   text-align: center;
   position: absolute;
   left: 50%;
   top: 20%;
   transform: translate(-50%, -50%);
+  border-radius: 8%;
 }
 
 .tooltip {
