--- a/frontend/src/pages/Splash/Splash.css
+++ b/frontend/src/pages/Splash/Splash.css
@@ -8,19 +8,19 @@
 }
 
 @media (max-width: 1200px) {
-  .container {
+  .splash-container {
     grid-template-columns: repeat(3, 1fr);
   }
 }
 
 @media (max-width: 900px) {
-  .container {
+  .splash-container {
     grid-template-columns: repeat(2, 1fr);
   }
 }
 
 @media (max-width: 600px) {
-  .container {
+  .splash-container {
     grid-template-columns: 1fr;
   }
 }
