--- a/frontend/src/components/SpotCard/SpotCard.css
+++ b/frontend/src/components/SpotCard/SpotCard.css
@@ -1,11 +1,56 @@
 .spot-card {
-  background-color: bisque;
+  background-color: #fff;
   padding: 15px;
   border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
   overflow: hidden;
-  height: 250px;
   cursor: pointer;
+  width: 80%;
+}
+
+.spot-image-container {
+  height: 150px;
+  width: 100%;
+  overflow: hidden;
+  border-radius: 8px;
+}
+
+.spot-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  padding: 0;
+  margin: 0;
+}
+
+.spot-info {
+  padding: 10px 0;
+}
+
+.spot-title {
+  font-size: 18px;
+  font-weight: bold;
+  margin: 0;
+  color: #333;
+}
+
+.spot-location {
+  font-size: 14px;
+  color: #777;
+  margin: 5px 0;
+}
+
+.spot-rating {
+  font-size: 14px;
+  color: gold;
+  margin: 5px 0;
+}
+
+.spot-price {
+  font-size: 16px;
+  font-weight: bold;
+
+  margin: 10px 0 0;
 }
